[package]
name = "rust_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
subxt = "0.37.0"
tokio = { version = "1.39.3", features = ["full"] }
hex = "0.4.3"
