[package]
name = "rust_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
subxt = "0.37.0"
tokio = { version = "1.39.3", features = ["full"] }
hex = "0.4.3"
indicatif = "0.17.8"
futures = "0.3.30"
deadpool = "0.12.1"
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }

